# modern-software-dev-assignments

week1/: chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: README.md  writeup.md
week2/app/: config.py  db.py  main.py
week2/app/routers/: action_items.py  notes.py
week2/app/schemas/: __init__.py  action_items.py  notes.py
week2/app/services/: extract.py
week2/frontend/: index.html
week2/tests/: test_endpoints.py  test_extract.py
week3/: .env.example  README.md  pyproject.toml
week3/server/: __init__.py  github_client.py  http_main.py  mcp_server.py  stdio_main.py
