[project]
name = "week3-mcp-github"
version = "0.1.0"
description = "MCP server wrapping the GitHub REST API. Supports STDIO and Streamable-HTTP transports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
mcp-github-stdio = "server.stdio_main:main"
mcp-github-http = "server.http_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
